--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "langgraph>=1.0.2",
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
+    "youtube-transcript-api>=1.2.3",
 ]
 
 [dependency-groups]
