Add web search agent

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # LLM configurations of your preferred provider
 MODEL_NAME=claude-haiku-4-5
 API_KEY=your-anthropic-api-key
+
+# Required For Search tool
+TAVILY_API_KEY=
