--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,12 @@ authors = [
 license = { text = "MIT" }
 requires-python = ">=3.13"
 dependencies = [
+    "ddgs>=9.7.1",
+    "duckduckgo-search>=8.1.1",
     "langchain>=1.0.3",
     "langchain-anthropic>=1.0.1",
+    "langchain-community>=0.4.1",
+    "langchain-tavily>=0.2.13",
     "langgraph>=1.0.2",
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
