--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "langchain>=1.0.3",
     "langchain-anthropic>=1.0.1",
     "langchain-community>=0.4.1",
+    "langchain-mcp-adapters>=0.1.12",
     "langchain-tavily>=0.2.13",
     "langgraph>=1.0.2",
     "python-dotenv>=1.2.1",
